--- a/ssafybottle_user/app/src/main/res/values/strings.xml
+++ b/ssafybottle_user/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SSAFYBOTTLE</string>
-    <string name="api_key">AIzaSyBPjPi2KKRClYS3CkYEVUf2Ej0aget6Mcw</string>
+    <string name="api_key"></string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
